--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,21 +9,17 @@
         "-file-line-error",
         "-pdf",
         "-shell-escape",
+        "-outdir=build",        // <-- add this line
         "%DOC%"
       ]
     }
   ],
   "latex-workshop.latex.recipes": [
-    {
-      "name": "latexmk (pdf)",
-      "tools": [
-        "latexmk"
-      ]
-    }
+    { "name": "latexmk (pdf)", "tools": ["latexmk"] }
   ],
   "latex-workshop.view.pdf.viewer": "tab",
   "latex-utilities.counting.enabled": false,
   "latex-utilities.counting.updateOnSave": false,
-  "latex-workshop.latex.outDir": "build",
+  "latex-workshop.latex.outDir": "build", // keep since we now actually output there
   "editor.wordWrap": "on"
 }
